feat: support transitions for documents
